# palautusrepositorio

./: README.md
viikko1/nhl-statistics-1/src/: index.py  statistics.py
viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko2/verkkokauppa-1/src/: index.py  kauppa.py  kirjanpito.py  pankki.py  varasto.py  viitegeneraattori.py
viikko3/hello-robot/src/tests/: increase_counter.robot
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko3/nhl-reader/src/: index.py  player.py  playerreader.py  playerstats.py
viikko3/web-login-robot/src/services/: user_service.py
viikko3/web-login-robot/src/tests/: home.robot  login.robot  register.robot  resource.robot
viikko4/: task7.txt
viikko4/maksukortti-mock/: pyproject.toml
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/: pyproject.toml
viikko4/tdd-ostoskori/: pyproject.toml
viikko4/tdd-ostoskori/src/: ostoskori.py
viikko4/tdd-ostoskori/src/tests/: ostoskori_test.py
viikko4/verkkokauppa/: .coverage  pyproject.toml
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
viikko5/tennis/: pyproject.toml
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py  query_builder.py
